Upgrade to Commons Lang3 v3.11 and resolve deprecation warnings